--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx6G
 org.gradle.parallel=true
 
 # Fabric Properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.6
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.1-1.20.4
 maven_group=com.trustysidekick.dragonrealm
 archives_base_name=dragonrealm
 
